build for gh pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
 
     </style>
-</head>
+<script defer src="main.454a1ab426e059afcac0.js"></script></head>
 <body>
     <div class="hovered">hover me!</div>
     <div id="container"></div>
